--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^0.27.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "recharts": "^2.1.10"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
